--- a/Template/package.json
+++ b/Template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "number-baseball",
+  "name": "name",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,9 +18,12 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.26.1",
     "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
